--- a/angular.json
+++ b/angular.json
@@ -47,8 +47,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
-            ],
+          ],
             "scripts": []
           },
           "configurations": {
